# GC-SLAM

./: .gitignore  AGENTS.md  AUDIT_WIRING_REPORT.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  requirements.txt  vectors.db-shm  vectors.db-wal
.venv_rosbags/: pyvenv.cfg
Fellowship/: pyvenv.cfg
archive/: README.md  ROADMAP.md  bin_atlas.py  lidar_bucket_noise_iw_jax_operators.py  lidar_bucket_noise_iw_jax_structures.py  livox_converter.py  validate_livox_converter.py
config/: cyclonedds.xml  cyclonedds_2.xml  m3dgr_body_T_wheel.yaml
docs/: 3D_POINTCLOUD.md  BAG_TOPICS_AND_USAGE.md  CAMERA_OVERHAUL_AND_SCAN_PATHWAY_PLAN.md  CODEBASE_SIMPLIFICATION_OPPORTUNITIES.md  CODE_DIFF_GOOD_RUN_vs_CURRENT.md  CODE_DIFF_SUMMARY.md  DUPLICATION_AUDIT_2026-01-23.md  ENGINEERING_CLEANUP_PLAN.md  EVALUATION.md  EVALUATION_IMPROVEMENTS.md  FRAME_AND_QUATERNION_CONVENTIONS.md  FRAME_INVESTIGATION_REPORT.md  Fusion_issues.md  GAZEBO_INTEGRATION.md  GC_SLAM.md  GEOMETRIC_COMPOSITIONAL_INTERFACE_SPEC.md  GOLDEN_CHILD_INTERFACE_SPEC.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_AUDIT_MATHEMATICAL_ADVANCES.md  IMU_BELIEF_MAP_AND_FUSION.md  IMU_IMPROVEMENTS_PLAN.md  INSTALLATION.md  KIMERA_BAG_INSPECTION.md  KIMERA_CALIBRATION_AND_FRAME.md  KIMERA_DATASET_AND_PIPELINE.md  KIMERA_FRAME_MAPPING.md  MAP_VISUALIZATION.md  (+29 more)
fl_ws/src/fl_slam_poc/: CMakeLists.txt  package.xml  setup.py
fl_ws/src/fl_slam_poc/config/: README.md  fl_slam_poc_base.yaml  gc_backend.yaml  gc_dead_end_audit.yaml  gc_kimera.yaml  gc_unified.yaml
fl_ws/src/fl_slam_poc/config/calibration/: kimera_acl_jackal2.yaml
fl_ws/src/fl_slam_poc/config/presets/: m3dgr.yaml
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/: __init__.py  adaptive.py  backend_node.py  birth.py  camera_batch_utils.py  diagnostics.py  dirichlet_routing.py  gaussian_geom.py  imu_jax_kernel.py  information_distances.py  lie_jax.py  map_publisher.py  nig.py  pipeline.py  process_noise.py  rendering.py  rerun_visualizer.py  timestamp.py  weights.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/diagnostics/: gpu.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/factors/: imu.py  loop.py  odom.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/fusion/: __init__.py  gaussian_info.py  imu_jax_kernel.py  lie_jax.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/models/: birth.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/operators/: __init__.py  anchor_drift.py  binning.py  deskew_constant_twist.py  fusion.py  hypothesis.py  imu_evidence.py  imu_gyro_evidence.py  imu_preintegration.py  inverse_wishart_jax.py  kappa.py  lidar_bucket_noise_iw_jax.py  lidar_evidence.py  lidar_surfel_extraction.py  map_update.py  measurement_noise_iw_jax.py  odom_evidence.py  odom_twist_evidence.py  ot_fusion.py  planar_prior.py  point_budget.py  predict.py  primitive_association.py  recompose.py  sinkhorn_ot.py  visual_pose_evidence.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/routing/: __init__.py  dirichlet_routing.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/state/: rgbd.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/structures/: __init__.py  bin_atlas.py  inverse_wishart_jax.py  lidar_bucket_noise_iw_jax.py  measurement_batch.py  measurement_noise_iw_jax.py  primitive_map.py
fl_ws/src/fl_slam_poc/fl_slam_poc/common/: __init__.py  belief.py  bev_pushforward.py  certificates.py  constants.py  dirichlet_geom.py  imu_preintegration.py  jax_init.py  jax_utils.py  ma_hex_web.py  op_report.py  param_models.py  primitives.py  runtime_counters.py  se3.py  splat_batch.py
fl_ws/src/fl_slam_poc/fl_slam_poc/common/geometry/: __init__.py  se3_jax.py
fl_ws/src/fl_slam_poc/fl_slam_poc/common/transforms/: se3.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/: __init__.py  anchor_manager.py  descriptor_builder.py  frontend_node.py  icp.py  image_decompress.py  livox_converter.py  loop_processor.py  pointcloud_gpu.py  rgbd_processor.py  sensor_io.py  status_monitor.py  tb3_odom_bridge.py  visual_feature_extractor.py  vmf_geometry.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/audit/: __init__.py  dead_end_audit_node.py  wiring_auditor.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/diagnostics/: op_report_publish.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/hub/: __init__.py  gc_sensor_hub.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/loops/: loop_processor.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/processing/: sensor_io.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/sensors/: __init__.py  dedup.py  depth_passthrough.py  imu_normalizer.py  lidar_camera_depth_fusion.py  lidar_surfels.py  livox_converter.py  odom_bridge.py  odom_normalizer.py  pointcloud_passthrough.py  qos_utils.py  rgbd_processor.py  sensor_io.py  splat_prep.py  splat_rendering.py  visual_feature_extractor.py
fl_ws/src/fl_slam_poc/fl_slam_poc/operators/: __init__.py  imu_preintegration.py
fl_ws/src/fl_slam_poc/fl_slam_poc/utility_nodes/: tb3_odom_bridge.py
fl_ws/src/fl_slam_poc/launch/: gc_rosbag.launch.py  poc_m3dgr_rosbag.launch.py
fl_ws/src/fl_slam_poc/msg/: IMUFactor.msg  IMUSegment.msg  RGBDImage.msg
fl_ws/src/fl_slam_poc/rviz/: gc_slam.rviz
fl_ws/src/fl_slam_poc/scripts/: backend_node  depth_passthrough  frontend_node  gc_backend_node  image_decompress  image_decompress_node  livox_converter  odom_bridge  tb3_odom_bridge
fl_ws/src/fl_slam_poc/src/: camera_rgbd_node.cpp
fl_ws/src/fl_slam_poc/test/: conftest.py  test_audit_invariants.py  test_budget_assertions.py  test_cert_schema.py  test_geometric_compositional_invariants.py  test_golden_child_invariants.py  test_imu_fusion_contract_b.py  test_imu_preintegration.py  test_lidar_surfel_extraction_mahex3d.py  test_operators.py  test_pointcloud_3d.py  test_primitives.py  test_rotation_conversions.py  test_visual_lidar_plan.py
(+122 files in other folders)
