<?xml version="1.0"?>
<package format="3">
  <name>fl_slam_poc</name>
  <version>0.1.0</version>
  <description>Geometric Compositional SLAM v2 - Branch-free compositional inference SLAM (ROS 2 Jazzy)</description>
  <maintainer email="whab13@mit.edu">Will Haber</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ament_cmake_python</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv4</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
